<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>box_mot</name>
  <version>0.1.0</version>
  <description>The box_mot package</description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank corp.</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rospy</depend>
  <export/>
</package>
